--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
     <li>Bogota (34,424,437) </li>
     <li>Angu (4,5,6)</li>
     <li>Tokyo (34,234,447) </li>
+    <li> Barranquilla (36,424,357) </li>
   </ol>
 
 </body>
